--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="first_name">First Name</string>
     <string name="job_title">Job Title</string>
+    <string name="email">Email</string>
+    <string name="phone">Phone</string>
 </resources>
