--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources>
     <string name="app_name">Slack Team</string>
 
+
+    <string name="name">Name</string>
     <string name="first_name">First Name</string>
+    <string name="Last_name">Last Name</string>
     <string name="job_title">Job Title</string>
     <string name="email">Email</string>
     <string name="phone">Phone</string>
